fix cursor
